--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <body>
         <div id="container">
             <div id="navBar">
+                <div>
                 <a href="./index.html">HOME</a>
                 <a href="./login.html">LOG IN</a>
                 <a href="./signup.html">SIGN UP</a>
+                </div>
             </div>
             <div id="slideshow">
                 <!--Show Slideshow here-->
@@ -22,8 +24,6 @@
             </div>
     
             <div id="sort-buttons">
-    
-                <!--Add sorting here-->
             </div>
             <div id="movies">
                 <!--Show list of movies here-->
