--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
             </div>
             <div id="slideshow">
                 <!--Show Slideshow here-->
-    
+
             </div>
     
             <div id="sort-buttons">
+                <form action=""id="sortForm">
+                    <select name="" id="sortOptions">
+                        <option value="select">select</option>
+                        <option value="lowToHigh">sort-lh</option>
+                        <option value="hightToLow">sort-hl</option>
+                    </select>
+                    <input type="submit" value="Sort">
+                </form>
             </div>
             <div id="movies">
                 <!--Show list of movies here-->
